tests/NormalTests/paczka1/small_fuzzy/37061084.err
Error in line 10: QAy1 A515 28,7
Error in line 13: QAy1 S224 0,7
